[gd_scene load_steps=28 format=3 uid="uid://ccp45kjeqnsyn"]

[ext_resource type="Theme" uid="uid://c2803i265ic3m" path="res://Assets/UI/Theme.tres" id="1_c2ibq"]
[ext_resource type="PackedScene" uid="uid://eutlnvg2s8kt" path="res://nodes/HotelLoader.tscn" id="1_uu6xs"]
[ext_resource type="PackedScene" uid="uid://vbxq2syg5rg2" path="res://nodes/HotelDisplay.tscn" id="2_r0du0"]
[ext_resource type="PackedScene" uid="uid://k60e43mehr53" path="res://nodes/CenteredTouchScreenButton.tscn" id="3_cm0pq"]
[ext_resource type="Script" uid="uid://de4xbdajv2shh" path="res://scripts/HotelInputHandler.gd" id="4_3dxm6"]
[ext_resource type="Texture2D" uid="uid://b4tr0alsee1u" path="res://icon.svg" id="4_fos0i"]
[ext_resource type="Script" uid="uid://dsukfn0p54e76" path="res://scripts/dataclasses/Player.gd" id="5_c2ibq"]
[ext_resource type="Script" uid="uid://ei74hetppbva" path="res://scripts/Builder.gd" id="5_fos0i"]
[ext_resource type="Script" uid="uid://hiwflyyi2wjt" path="res://scripts/ui/RoomButtonCreator.gd" id="6_trn2v"]
[ext_resource type="Script" uid="uid://b74ejcotfcsul" path="res://scripts/ui/HotelButtonData.gd" id="7_03owx"]
[ext_resource type="PackedScene" uid="uid://cn8tnkricq2cr" path="res://nodes/HabitantSelection.tscn" id="9_20pc6"]
[ext_resource type="Script" uid="uid://bkheb4gi1iqo" path="res://scripts/dataclasses/roomtypes/Elevator.gd" id="9_wkp8b"]
[ext_resource type="PackedScene" uid="uid://dy1coe5jwdf0y" path="res://nodes/CycleProgress.tscn" id="11_20pc6"]
[ext_resource type="PackedScene" uid="uid://dp8ysxvi24x3p" path="res://nodes/GiftingMenu.tscn" id="12_c6i3y"]
[ext_resource type="Script" uid="uid://duni3ujulu4ee" path="res://scripts/ui/UIMenuHolder.gd" id="13_j4qnp"]

[sub_resource type="Resource" id="Resource_fpfj3"]
script = ExtResource("5_c2ibq")
money = 300.0
inventory = Dictionary[StringName, int]({
&"bretzel": 4,
&"pirozhki": 2
})
metadata/_custom_type_script = "uid://dsukfn0p54e76"

[sub_resource type="Resource" id="Resource_trn2v"]
script = ExtResource("7_03owx")
button_text = "Build Room Left
"
button_actions = Array[String](["build_room_left"])

[sub_resource type="Resource" id="Resource_03owx"]
script = ExtResource("7_03owx")
button_text = "Build Room Right
"
button_actions = Array[String](["build_room_right"])

[sub_resource type="Resource" id="Resource_20pc6"]
script = ExtResource("7_03owx")
button_text = "Build Floor Up
"
button_actions = Array[String](["build_room_up"])
room_whitelist = [ExtResource("9_wkp8b")]

[sub_resource type="Resource" id="Resource_5vvyt"]
script = ExtResource("7_03owx")
button_text = "Build Floor Down
"
button_actions = Array[String](["build_room_down"])
room_whitelist = [ExtResource("9_wkp8b")]

[sub_resource type="Resource" id="Resource_wkp8b"]
script = ExtResource("7_03owx")
button_text = "Expand to Residence
"
button_actions = Array[String](["build_residence"])
room_whitelist = ["Room"]

[sub_resource type="Resource" id="Resource_c6i3y"]
script = ExtResource("7_03owx")
button_text = "Expand to Elevator"
button_actions = Array[String](["build_elevator"])
room_whitelist = ["Room"]
metadata/_custom_type_script = "uid://b74ejcotfcsul"

[sub_resource type="Resource" id="Resource_c2ibq"]
script = ExtResource("7_03owx")
button_text = "Move Habitant here"
button_actions = Array[String](["select_habitant_to_reside"])
room_whitelist = ["Residence"]
metadata/_custom_type_script = "uid://b74ejcotfcsul"

[sub_resource type="Resource" id="Resource_j4qnp"]
script = ExtResource("7_03owx")
button_text = "Enter"
button_actions = Array[String](["enter_residence"])
room_whitelist = ["Residence"]
metadata/_custom_type_script = "uid://b74ejcotfcsul"

[sub_resource type="Resource" id="Resource_sc1dx"]
script = ExtResource("7_03owx")
button_text = "Gift"
button_actions = Array[String](["open_gift_menu"])
room_whitelist = ["Residence"]
metadata/_custom_type_script = "uid://b74ejcotfcsul"

[sub_resource type="InputEventAction" id="InputEventAction_j4qnp"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_fpfj3"]
events = [SubResource("InputEventAction_j4qnp")]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_c2ibq")

[node name="MoveLeft" parent="." instance=ExtResource("3_cm0pq")]
layout_mode = 1

[node name="Control" parent="MoveLeft" index="0"]
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0

[node name="TouchScreenButton" parent="MoveLeft/Control" index="0"]
position = Vector2(-345, -100)
texture_normal = ExtResource("4_fos0i")
action = "ui_left"
visibility_mode = 1

[node name="MoveRight" parent="." instance=ExtResource("3_cm0pq")]
layout_mode = 1
anchor_left = 0.88
anchor_right = 0.88

[node name="Control" parent="MoveRight" index="0"]
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0

[node name="TouchScreenButton" parent="MoveRight/Control" index="0"]
position = Vector2(280, -31)
texture_normal = ExtResource("4_fos0i")
action = "ui_right"
visibility_mode = 1

[node name="HotelInputHandler" type="Node" parent="." node_paths=PackedStringArray("hotel_display_node", "builder_node", "habitant_selection", "gift_menu")]
unique_name_in_owner = true
script = ExtResource("4_3dxm6")
player_instance = SubResource("Resource_fpfj3")
hotel_display_node = NodePath("../Control/Hotel")
builder_node = NodePath("../Builder")
habitant_selection = NodePath("../MarginContainer/SelectHabitant")
gift_menu = NodePath("../MarginContainer/GiftingMenu")

[node name="Builder" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_fos0i")

[node name="HotelLoader" parent="." node_paths=PackedStringArray("hotel_display_node") instance=ExtResource("1_uu6xs")]
hotel_display_node = NodePath("../Control/Hotel")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Hotel" parent="Control" instance=ExtResource("2_r0du0")]
scale = Vector2(2, 2)

[node name="HotelUtilButtons" type="HBoxContainer" parent="."]
z_index = 1
custom_minimum_size = Vector2(800, 140)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 230.0
offset_right = 400.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_trn2v")
buttons = Array[ExtResource("7_03owx")]([SubResource("Resource_trn2v"), SubResource("Resource_03owx"), SubResource("Resource_20pc6"), SubResource("Resource_5vvyt"), SubResource("Resource_wkp8b"), SubResource("Resource_c6i3y"), SubResource("Resource_c2ibq"), SubResource("Resource_j4qnp"), SubResource("Resource_sc1dx")])

[node name="CycleProgress" parent="." instance=ExtResource("11_20pc6")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -173.0
offset_top = -168.0
offset_right = -45.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="CloseHotkey" type="Button" parent="."]
layout_mode = 0
shortcut = SubResource("Shortcut_fpfj3")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 80
script = ExtResource("13_j4qnp")

[node name="GiftingMenu" parent="MarginContainer" instance=ExtResource("12_c6i3y")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SelectHabitant" parent="MarginContainer" instance=ExtResource("9_20pc6")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="built_stuff" from="Builder" to="Control/Hotel" method="draw_hotel"]
[connection signal="current_room_changed" from="Builder" to="Control/Hotel" method="change_current_room"]
[connection signal="current_room_changed" from="Control/Hotel" to="HotelUtilButtons" method="current_room_updated"]
[connection signal="generated_new_spatial_room_finder" from="Control/Hotel" to="HotelInputHandler" method="set_spatial_room_finder"]
[connection signal="pressed" from="CloseHotkey" to="MarginContainer" method="close_menu"]
[connection signal="item_selected" from="MarginContainer/GiftingMenu" to="HotelInputHandler" method="finished_gift_menu"]
[connection signal="selected_habitant" from="MarginContainer/SelectHabitant" to="HotelInputHandler" method="select_habitant_to_reside_finish"]

[editable path="MoveLeft"]
[editable path="MoveRight"]
